# wei

./: Cargo.toml  README.md  fastgithub.sh
src/: main.rs
